# flexbe_project_behaviors

PROJECT_behaviors/: CMakeLists.txt  package.xml  setup.py
PROJECT_behaviors/manifest/: example_behavior.xml
PROJECT_behaviors/src/PROJECT_behaviors/: example_behavior_sm.py
PROJECT_flexbe_states/: CMakeLists.txt  package.xml
flexbe_behaviors/: CMakeLists.txt  package.xml
flexbe_behaviors/manifest/: example_behavior.xml
flexbe_behaviors/src/flexbe_behaviors/: example_behavior_sm.py
