<package>
  <name>PROJECT_flexbe_states</name>
  <version>0.0.0</version>
  <description>
     PROJECT_flexbe_states provides a collection of custom states required for
     customer projects, feel free to add new states.
  </description>

  <author email="support@synapticon.com">Synapticon GmbH</author> 
  <maintainer email="todo@synapticon.com">TODO</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
